objects/Won_Opportunity_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date_Last_Signature_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirm the close date matches the last signature date from the attached order.</description>
        <inlineHelpText>Confirm the close date matches the last signature date from the attached order.</inlineHelpText>
        <label>Close Date = Last Signature Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Add notes here to explain why something is checked off that might be questionable.</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>One_Time_Discount_Accting_Bin_Duration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there are any One Time Discount line items, set the accounting bin to match the product being discounted. For example on an opp where only Vault licenses were sold, we would need to discount Vault. Also confirm the duration of the one time discount matches the duration of the opp or at least won&apos;t cause negative ARR for the opp in the months it is active.</description>
        <inlineHelpText>If there are any One Time Discount line items, set the accounting bin to match the product being discounted. For example on an opp where only Vault licenses were sold, we would need to discount Vault. Also confirm the duration of the one time discount matches the duration of the opp or at least won&apos;t cause negative ARR for the opp in the months it is active.</inlineHelpText>
        <label>One Time Discount Accting Bin &amp; Duration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Signed_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirm the Opportunity Amount matches that on the signed order, of if it&apos;s a multi-year opp billed annually, make sure the annual amount matches.</description>
        <inlineHelpText>Confirm the Opportunity Amount matches that on the signed order, of if it&apos;s a multi-year opp billed annually, make sure the annual amount matches.</inlineHelpText>
        <label>Opportunity Amount = Signed Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Won Opportunity Checklists</relationshipLabel>
        <relationshipName>Won_Opportunity_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Start_Dates_Match_Intent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If products have start dates or different durations that don&apos;t match the opp, check that what&apos;s there follow&apos;s the intent of the opportunity. The purpose of this is to not have upsell or downsell unnecessarily. For example, if a customer will have one number of seats for the first six months of an opp, and one more seat starting in month 7, there needs to be a start date on a product to show the upsell. They can&apos;t all start on day one for a big upsell and then downsell to no products before the subscription end date.</description>
        <inlineHelpText>If products have start dates or different durations that don&apos;t match the opp, check that what&apos;s there follow&apos;s the intent of the opportunity. The purpose is to not have upsell or downsell unnecessarily. For example, if a customer will have one number of seats for the first six months of an opp, and one more seat starting in month 7, there needs to be a start date on a product to show the upsell. They can&apos;t all start on day one for a big upsell and then downsell to no products before the subscription end.</inlineHelpText>
        <label>Product Start Dates Match Intent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subs_Start_End_of_Months_Apart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Subscription Start Date and Subscription End Date are the # of Months for Subs Activation Apart, and if it&apos;s a renewal they follow the end date pattern from the last ending subscription period.</description>
        <inlineHelpText>Subscription Start Date and Subscription End Date are the # of Months for Subs Activation Apart, and if it&apos;s a renewal they follow the end date pattern from the last ending subscription period.</inlineHelpText>
        <label>Subs Start/End # of Months Apart</label>
        <type>Checkbox</type>
    </fields>
    <label>Won Opportunity Checklist</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Won Opportunity Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Won Opportunity Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>